<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".OperationActivity">

    <TextView
        android:id="@+id/label_oper_time"
        android:layout_width="338dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/label_for_time_oper"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wip_after" />

    <EditText
        android:id="@+id/wip_before2"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/oper_wip_before"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/wip_after"
        app:layout_constraintEnd_toStartOf="@+id/wip_after"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wip_after"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/oper_picture"
        android:layout_width="132dp"
        android:layout_height="106dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <Spinner
        android:id="@+id/spTypeWork"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:entries="@array/typeOfWork"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/text_name_operation"
        app:layout_constraintStart_toStartOf="@+id/text_name_operation"
        app:layout_constraintTop_toBottomOf="@+id/oper_picture" />

    <EditText
        android:id="@+id/wip_after"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="@string/oper_wip_after"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/total_time"
        android:layout_width="141dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/oper_time_total"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/wip_before2"
        app:layout_constraintTop_toTopOf="@+id/waiting_time" />

    <EditText
        android:id="@+id/waiting_time"
        android:layout_width="148dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/oper_time_waiting"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/wip_after"
        app:layout_constraintTop_toBottomOf="@+id/label_oper_time" />

    <Button
        android:id="@+id/description"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:text="@string/description_operation"
        app:layout_constraintStart_toStartOf="@+id/wip_before2"
        app:layout_constraintTop_toTopOf="@+id/take_picture" />

    <ImageButton
        android:id="@+id/take_picture"
        android:layout_width="119dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="@+id/wip_after"
        app:layout_constraintTop_toBottomOf="@+id/waiting_time" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="340dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/wip"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name_operation" />

    <Button
        android:id="@+id/btn_save_operation"
        android:layout_width="240dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_save_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_picture" />

    <EditText
        android:id="@+id/text_name_operation"
        android:layout_width="347dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/description_operation"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTypeWork" />

</androidx.constraintlayout.widget.ConstraintLayout>